# LinuxApplicationDevelopment2024

./: Dockerfile  README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  fun.c
03_Text/: randomize.sh
04_Debugging/: Makefile  gdb_script_1.gdb  gdb_script_2.gdb  range.c
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  remove.c
07_Environmental/: Makefile.am  configure.ac
07_Environmental/src/: rhasher.c
07_Environmental/src/.deps/: rhasher.Po
08_I18n/: Makefile.am  configure.ac
08_I18n/po/: POTFILES.in  ru.po
08_I18n/src/: guess_number.c
09_PatchDiff/: Makefile  change1.patch  change2.patch  change3.patch  random_maze.c
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  buf.h  libbuf.c
10_LibTesting/tests/: Makefile.am  tests.ts
11_Documenting/: Makefile.am  configure.ac
11_Documenting/po/: ru.po
11_Documenting/src/: Makefile.am  guess_number.c  int2roman.csv
12_InstallPackaging/: Doxyfile.in  Makefile.am  configure.ac
12_InstallPackaging/po/: POTFILES.in  ru.po
12_InstallPackaging/src/: guess_number.c  guess_number.h  test
12_InstallPackaging/tests/: Makefile.am  tests.ts
